chore: add initial models

--- a/server/makefile
+++ b/server/makefile
@@ -1,8 +1,3 @@
-# Set of commands to manage migrations
-activate-env:
-	@echo "activating env..."
-	. venv/bin/activate
-
 # Set of commands to start-app
 install:
 	@echo "Installing packages..."
@@ -11,20 +6,20 @@ install:
 # make make-migration MSG="your_migration_message"
 make-migration:
 	@echo "Making migrations."
-	python manage.py makemigrations --name $(MSG)
+	python eld_trip_tracker/manage.py makemigrations --name $(MSG)
 	
 run-migration:
 	@echo "Run migrations."
-	python manage.py migrate
+	python eld_trip_tracker/manage.py migrate
 	
 # make undo-migration APP_NAME="your_migration_message" NO=0001
 undo-migration:
 	@echo "Run migrations."
-	python manage.py migrate $(APP_NAME) $(NO)
+	python eld_trip_tracker/manage.py migrate $(APP_NAME) $(NO)
 	
 start-app:
 	@echo "Starting app on port ${PORT}..."
-	python manage.py runserver
+	python eld_trip_tracker/manage.py runserver
 
 lint:
 	@echo "Checking lint errors"
