feat: add endpoints to save and get trips

--- a/server/mypy.ini
+++ b/server/mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 # General settings
-python_version = 3.12  # Specify your Python version
+python_version = 3.12
 warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
@@ -16,11 +16,11 @@ warn_unreachable = True
 # Django settings
 plugins = 
     mypy_django_plugin.main,
-    mypy_drf_plugin.main
+    djangorestframework-stubs
 
 # Per-module settings
-[mypy.plugins.django-stubs.*]
-django_settings_module = "restaurant_menus.settings.development"
+[mypy.plugins.django-stubs]
+django_settings_module = "eld_trip_tracker.eld_trip_tracker.settings.development"
 
 # Ignore specific modules or directories
 [mypy-*.migrations.*]
