feat: calculate fuel stops

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,9 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
+FRONTEND_URL=http://localhost:3001
+
+GDAL_LIBRARY_PATH=
+GEOS_LIBRARY_PATH=
+
+MAPBOX_ACCESS_TOKEN=
