--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -39,6 +39,8 @@ djangorestframework==3.15.2
     # via -r requirements.in
 djangorestframework-stubs==3.15.3
     # via -r requirements.in
+gunicorn==23.0.0
+    # via -r requirements.in
 idna==3.10
     # via requests
 isort==6.0.1
@@ -53,6 +55,7 @@ packaging==24.2
     # via
     #   black
     #   build
+    #   gunicorn
 pathspec==0.12.1
     # via black
 pdf2image==1.17.0
