--- a/server/requirements.in
+++ b/server/requirements.in
@@ -10,5 +10,5 @@ djangorestframework-stubs==3.15.3
 polyline==2.0.2
 reportlab==4.3.1
 pdf2image==1.17.0
-pillow==11.1.0
 gunicorn==23.0.0
+llama-index-llms-gemini==0.4.12
