--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,17 +4,34 @@
 #
 #    pip-compile requirements.in
 #
+aiohappyeyeballs==2.6.1
+    # via aiohttp
+aiohttp==3.11.14
+    # via llama-index-core
+aiosignal==1.3.2
+    # via aiohttp
+annotated-types==0.7.0
+    # via pydantic
+anyio==4.9.0
+    # via httpx
 asgiref==3.8.1
     # via
     #   django
     #   django-cors-headers
     #   django-stubs
+attrs==25.3.0
+    # via aiohttp
 black==25.1.0
     # via -r requirements.in
 build==1.2.2.post1
     # via pip-tools
+cachetools==5.5.2
+    # via google-auth
 certifi==2025.1.31
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 chardet==5.2.0
     # via reportlab
 charset-normalizer==3.4.1
@@ -22,7 +39,14 @@ charset-normalizer==3.4.1
 click==8.1.8
     # via
     #   black
+    #   nltk
     #   pip-tools
+dataclasses-json==0.6.7
+    # via llama-index-core
+deprecated==1.2.18
+    # via llama-index-core
+dirtyjson==1.0.8
+    # via llama-index-core
 django==5.1.7
     # via
     #   django-cors-headers
@@ -39,30 +63,107 @@ djangorestframework==3.15.2
     # via -r requirements.in
 djangorestframework-stubs==3.15.3
     # via -r requirements.in
+filetype==1.2.0
+    # via llama-index-core
+frozenlist==1.5.0
+    # via
+    #   aiohttp
+    #   aiosignal
+fsspec==2025.3.0
+    # via llama-index-core
+google-ai-generativelanguage==0.6.15
+    # via google-generativeai
+google-api-core[grpc]==2.24.2
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-python-client
+    #   google-generativeai
+google-api-python-client==2.165.0
+    # via google-generativeai
+google-auth==2.38.0
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-generativeai
+google-auth-httplib2==0.2.0
+    # via google-api-python-client
+google-generativeai==0.8.4
+    # via llama-index-llms-gemini
+googleapis-common-protos==1.69.2
+    # via
+    #   google-api-core
+    #   grpcio-status
+greenlet==3.1.1
+    # via sqlalchemy
+grpcio==1.71.0
+    # via
+    #   google-api-core
+    #   grpcio-status
+grpcio-status==1.71.0
+    # via google-api-core
 gunicorn==23.0.0
     # via -r requirements.in
+h11==0.14.0
+    # via httpcore
+httpcore==1.0.7
+    # via httpx
+httplib2==0.22.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
+httpx==0.28.1
+    # via llama-index-core
 idna==3.10
-    # via requests
+    # via
+    #   anyio
+    #   httpx
+    #   requests
+    #   yarl
 isort==6.0.1
     # via -r requirements.in
+joblib==1.4.2
+    # via nltk
+llama-index-core==0.12.25
+    # via llama-index-llms-gemini
+llama-index-llms-gemini==0.4.12
+    # via -r requirements.in
+marshmallow==3.26.1
+    # via dataclasses-json
+multidict==6.2.0
+    # via
+    #   aiohttp
+    #   yarl
 mypy==1.15.0
     # via -r requirements.in
 mypy-extensions==1.0.0
     # via
     #   black
     #   mypy
+    #   typing-inspect
+nest-asyncio==1.6.0
+    # via llama-index-core
+networkx==3.4.2
+    # via llama-index-core
+nltk==3.9.1
+    # via llama-index-core
+numpy==2.2.4
+    # via llama-index-core
 packaging==24.2
     # via
     #   black
     #   build
     #   gunicorn
+    #   marshmallow
 pathspec==0.12.1
     # via black
 pdf2image==1.17.0
     # via -r requirements.in
-pillow==11.1.0
+pillow==10.4.0
     # via
-    #   -r requirements.in
+    #   llama-index-core
+    #   llama-index-llms-gemini
     #   pdf2image
     #   reportlab
 pip-tools==7.4.1
@@ -71,20 +172,77 @@ platformdirs==4.3.7
     # via black
 polyline==2.0.2
     # via -r requirements.in
+propcache==0.3.0
+    # via
+    #   aiohttp
+    #   yarl
+proto-plus==1.26.1
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+protobuf==5.29.4
+    # via
+    #   google-ai-generativelanguage
+    #   google-api-core
+    #   google-generativeai
+    #   googleapis-common-protos
+    #   grpcio-status
+    #   proto-plus
 psycopg==3.2.6
     # via -r requirements.in
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.1
+    # via google-auth
+pydantic==2.10.6
+    # via
+    #   google-generativeai
+    #   llama-index-core
+pydantic-core==2.27.2
+    # via pydantic
+pyparsing==3.2.1
+    # via httplib2
 pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
 python-dotenv==1.0.1
     # via -r requirements.in
+pyyaml==6.0.2
+    # via llama-index-core
+regex==2024.11.6
+    # via
+    #   nltk
+    #   tiktoken
 reportlab==4.3.1
     # via -r requirements.in
 requests==2.32.3
-    # via djangorestframework-stubs
+    # via
+    #   djangorestframework-stubs
+    #   google-api-core
+    #   llama-index-core
+    #   tiktoken
+rsa==4.9
+    # via google-auth
+sniffio==1.3.1
+    # via anyio
+sqlalchemy[asyncio]==2.0.39
+    # via
+    #   llama-index-core
+    #   sqlalchemy
 sqlparse==0.5.3
     # via django
+tenacity==9.0.0
+    # via llama-index-core
+tiktoken==0.9.0
+    # via llama-index-core
+tqdm==4.67.1
+    # via
+    #   google-generativeai
+    #   llama-index-core
+    #   nltk
 types-pyyaml==6.0.12.20241230
     # via
     #   django-stubs
@@ -93,17 +251,36 @@ types-requests==2.32.0.20250306
     # via djangorestframework-stubs
 typing-extensions==4.12.2
     # via
+    #   anyio
     #   django-stubs
     #   django-stubs-ext
     #   djangorestframework-stubs
+    #   google-generativeai
+    #   llama-index-core
     #   mypy
     #   psycopg
+    #   pydantic
+    #   pydantic-core
+    #   sqlalchemy
+    #   typing-inspect
+typing-inspect==0.9.0
+    # via
+    #   dataclasses-json
+    #   llama-index-core
+uritemplate==4.1.1
+    # via google-api-python-client
 urllib3==2.3.0
     # via
     #   requests
     #   types-requests
 wheel==0.45.1
     # via pip-tools
+wrapt==1.17.2
+    # via
+    #   deprecated
+    #   llama-index-core
+yarl==1.18.3
+    # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
